--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <!-- your webpage info goes here -->
@@ -30,7 +30,7 @@
 
 			<h2>Inicio</h2>
 			<p>
-				Esta es mi primera página web! Pude codificar todo el HTML y CSS para poder hacerlo!
+				Esta es mi primera página web! Pude codificar todo el HTML y CSS para poder hacerlo! (MODIFICADO)
 			</p>
 			<p> 
 				I can use my skills here to create websites for my business, my friends and family, my C.V, blog or articles. As well as any games or more experiment stuff (which is what the web is really all about). 
